--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -4,6 +4,9 @@
   "Information" : "Information",
   "Cancel" : "Cancel",
   "Sent"  :  "Sent",
+  "Received" : "Received",
+  "Confirmed" :  "Confirmed",
+  "Pending" : "Pending",
 
   "en" : "English",
   "ru" : "Russian",
@@ -29,11 +32,59 @@
   "sentSuccess" : "Transaction processed successfully",
   "walletAddress" : "Wallet address",
   "receive" : "Receive",
-  "send" : "send",
+  "send" : "Send",
+  "Sell" : "Sell",
   "scanAddressToReceivePayment" : "Scan address to receive payment",
   "tokens": "Tokens",
   "nfts": "NFTs",
   "settings": "Settings",
   "changeFullNameHint" : "Enter your full name",
-  "language" : "Language"
+  "language" : "Language",
+  "network" : "Network",
+  "newsletter" : "Newsletter",
+  "fingerprint" : "Fingerprint/FaceID Login",
+  "sendTokens" : "Send tokens",
+  "to" : "To: ",
+  "selectToken" : "Select token",
+  "amount" : "Amount: ",
+  "loading" : "Loading...",
+  "fingerprintEnabled" : "Fingerprint Login enabled!",
+  "fingerprintDisabled" : "Fingerprint Login disabled!",
+  "submit" : "Submit",
+  "walletEmptyError": "Wallet address can't be empty",
+  "noSelectedToken" : "No selected token",
+  "pleaseEnterSomeAmount" : "Please enter some amount",
+  "estimatedGasFee" : "Estimated gas fee",
+  "dontHaveSuchAmount" : "Don't have such amount",
+  "total": "Total",
+  "noTokensYet": "No tokens yet",
+  "noNFTsYet": "No NTFs yet",
+  "learnMore": "Learn more",
+  "dontSeeNFTS": "Don't see your NFTs?",
+  "importNFT" : "Import NFTs",
+  "noTransactionsYet" : "No transactions yet...",
+  "See in AR" : "See in AR",
+  "or" : "or",
+  "Already have account?" : "Already have account?",
+  "Don't have an account yet?" : "Don't have an account yet?",
+  "Sign in" : "Sing in",
+  "Sign up" : "Sing up",
+  "By signing up, you agree to " : "By signing up, you agree to ",
+  "Terms of Service " : "Terms of Service ",
+  "and confirm that our ": "and confirm that our ",
+  "Privacy Policy ": "Privacy Policy ",
+  "applies to you" : "applies to you",
+  "Scan to login" : "Scan to login",
+  "Login manually": "Login manually",
+  "Email": "Email",
+  "Please enter a valid email.": "Please enter a valid email.",
+  "Please enter a valid code.": "Please enter a valid code.",
+  "Password": "Password",
+  "Password can't be empty" : "Password can't be empty",
+  "Fullname" : "Fullname",
+  "Name can't be empty" : "Name can't be empty",
+  "Repeat password": "Repeat password",
+  "Not match" : "Not match"
+
+
 }
