--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -4,6 +4,7 @@
   "Information" : "Информация",
   "Cancel" : "Отмена",
   "Sent"  :  "Отправлено",
+  "Received" : "Получено",
 
   "en" : "Английский",
   "ru" : "Русский",
@@ -30,10 +31,56 @@
   "walletAddress" : "Адрес кошелька",
   "receive" : "Получить",
   "send" : "Отправить",
+  "Sell" : "Продать",
   "scanAddressToReceivePayment" : "Сканирурте адрес для получения платежа",
   "tokens": "Токены",
   "nfts": "NFT",
   "settings": "Настройки",
   "changeFullNameHint" : "Введите полное имя",
-  "language" : "Язык"
+  "language" : "Язык",
+  "network" : "Сеть",
+  "newsletter" : "Новости",
+  "fingerprint" : "Вход по отпечатку/лицу",
+  "sendTokens" : "Отправить токены",
+  "to" : "Кому: ",
+  "selectToken" : "Выбрать токен",
+  "amount" : "Количество: ",
+  "loading" : "Загрузка...",
+  "fingerprintEnabled" : "Биометрия включена!",
+  "fingerprintDisabled" : "Биометрия выключена!",
+  "submit" : "Сохранить",
+  "walletEmptyError": "Адресс кошелька не может быть пуст",
+  "noSelectedToken" : "Токен не выбран",
+  "pleaseEnterSomeAmount" : "Введите количество",
+  "estimatedGasFee" : "Расчетная комиссия",
+  "dontHaveSuchAmount" : "Нет нужной суммы",
+  "total": "В сумме",
+  "noTokensYet": "Нет криптовалют",
+  "noNFTsYet": "Нет NFT",
+  "learnMore": "Узнать более",
+  "dontSeeNFTS": "Не видите ваших NFT?",
+  "importNFT" : "Импорт NFT",
+  "noTransactionsYet" : "Нет транзакций...",
+  "See in AR" : "Посмотреть в AR",
+  "or": "или",
+  "Already have account?" : "Уже имеете аккаунт?",
+  "Don't have an account yet?" : "Все еще нет аккаунта?",
+  "Sign in" : "Авторизация",
+  "Sign up" : "Регистрация",
+  "By signing up, you agree to " : "Регистрируясь, вы соглашаетесь c  ",
+  "Terms of Service " : "Условиями обслуживания ",
+  "and confirm that our ": "и подтверждаете, что наша ",
+  "Privacy Policy ": "Политика конфиденциальности ",
+  "applies to you" : "относится к вам",
+  "Scan to login" : "Использовать биометрию",
+  "Login manually": "Войти вручную",
+  "Email": "Эл. адрес",
+  "Please enter a valid email.": "Введите, пожалуйста, действительный адрес электронной почты.",
+  "Please enter a valid code.": "Введите, пожалуйста, действительный код.",
+  "Password": "Пароль",
+  "Password can't be empty" : "Пароль не может быть пустым",
+  "Fullname" : "Полное имя",
+  "Name can't be empty": "Введите полное имя",
+  "Repeat password": "Повторите пароль",
+  "Not match" : "Пароли не совпадают"
 }
