--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -82,5 +82,6 @@
   "Fullname" : "Полное имя",
   "Name can't be empty": "Введите полное имя",
   "Repeat password": "Повторите пароль",
-  "Not match" : "Пароли не совпадают"
+  "Not match" : "Пароли не совпадают",
+  "next": "Далее"
 }
