reset password + registration

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,93 +1,93 @@
 {
-  "Success" : "Success",
-  "Error" : "Error",
-  "Information" : "Information",
-  "Cancel" : "Cancel",
-  "Sent"  :  "Sent",
-  "Received" : "Received",
-  "Confirmed" :  "Confirmed",
-  "Pending" : "Pending",
-
-  "en" : "English",
-  "ru" : "Russian",
-
-  "langMessage" : "The language of the application is set according to the default language of the phone",
-  "passErrorMessage" : "Email or Password cannot be empty",
-  "btnRegister" : "Sign Up",
-  "newPassword" : "New password has been sent",
-  "regComplete" : "Registration Complete!",
-  "clipboard" : "Wallet address has been copied to clipboard!",
-  "senderAddress" : "Input address or press scan button",
-  "changeFullName" : "Change Full Name",
-  "changeemail" : "Change Email",
-  "changeemailHint" : "Enter new email",
-  "changepwd" : "Change Password",
-  "enterNewPassword" : "Enter new password",
-  "succupdated" : "Successfully updated",
-  "notEnoughFunds" : "Not enough funds",
-  "switchNetwork" : "Would you like to switch default network?",
-  "bio" : "Would you like to use Fingerprint/FaceID for authorization?",
-  "code" : "Enter code",
-  "bscScan"  :  "You'll be redirected to BscScan",
-  "sentSuccess" : "Transaction processed successfully",
-  "walletAddress" : "Wallet address",
-  "receive" : "Receive",
-  "send" : "Send",
-  "Sell" : "Sell",
-  "scanAddressToReceivePayment" : "Scan address to receive payment",
+  "Success": "Success",
+  "Error": "Error",
+  "Information": "Information",
+  "Cancel": "Cancel",
+  "Sent": "Sent",
+  "Received": "Received",
+  "Confirmed": "Confirmed",
+  "Pending": "Pending",
+  "en": "English",
+  "ru": "Russian",
+  "langMessage": "The language of the application is set according to the default language of the phone",
+  "passErrorMessage": "Email or Password cannot be empty",
+  "btnRegister": "Sign Up",
+  "newPassword": "New password has been sent",
+  "regComplete": "Registration Complete!",
+  "clipboard": "Wallet address has been copied to clipboard!",
+  "senderAddress": "Input address or press scan button",
+  "changeFullName": "Change Full Name",
+  "changeemail": "Change Email",
+  "changeemailHint": "Enter new email",
+  "changepwd": "Change Password",
+  "enterNewPassword": "Enter new password",
+  "succupdated": "Successfully updated",
+  "notEnoughFunds": "Not enough funds",
+  "switchNetwork": "Would you like to switch default network?",
+  "bio": "Would you like to use Fingerprint/FaceID for authorization?",
+  "code": "Enter code",
+  "bscScan": "You'll be redirected to BscScan",
+  "sentSuccess": "Transaction processed successfully",
+  "walletAddress": "Wallet address",
+  "receive": "Receive",
+  "send": "Send",
+  "Sell": "Sell",
+  "scanAddressToReceivePayment": "Scan address to receive payment",
   "tokens": "Tokens",
   "nfts": "NFTs",
   "settings": "Settings",
-  "changeFullNameHint" : "Enter your full name",
-  "language" : "Language",
-  "network" : "Network",
-  "newsletter" : "Newsletter",
-  "fingerprint" : "Fingerprint/FaceID",
-  "sendTokens" : "Send tokens",
-  "to" : "To: ",
-  "selectToken" : "Select token",
-  "amount" : "Amount: ",
-  "loading" : "Loading...",
-  "fingerprintEnabled" : "Fingerprint Login enabled!",
-  "fingerprintDisabled" : "Fingerprint Login disabled!",
-  "submit" : "Submit",
+  "changeFullNameHint": "Enter your full name",
+  "language": "Language",
+  "network": "Network",
+  "newsletter": "Newsletter",
+  "fingerprint": "Fingerprint/FaceID",
+  "sendTokens": "Send tokens",
+  "to": "To: ",
+  "selectToken": "Select token",
+  "amount": "Amount: ",
+  "loading": "Loading...",
+  "fingerprintEnabled": "Fingerprint Login enabled!",
+  "fingerprintDisabled": "Fingerprint Login disabled!",
+  "submit": "Submit",
   "walletEmptyError": "Wallet address can't be empty",
-  "noSelectedToken" : "No selected token",
-  "pleaseEnterSomeAmount" : "Please enter some amount",
-  "estimatedGasFee" : "Estimated gas fee",
-  "dontHaveSuchAmount" : "Don't have such amount",
+  "noSelectedToken": "No selected token",
+  "pleaseEnterSomeAmount": "Please enter some amount",
+  "estimatedGasFee": "Estimated gas fee",
+  "dontHaveSuchAmount": "Don't have such amount",
   "total": "Total",
   "noTokensYet": "No tokens yet",
   "noNFTsYet": "No NTFs yet",
   "learnMore": "Learn more",
   "dontSeeNFTS": "Don't see your NFTs?",
-  "importNFT" : "Import NFTs",
-  "noTransactionsYet" : "No transactions yet...",
-  "See in AR" : "See in AR",
-  "or" : "or",
-  "Already have account?" : "Already have account?",
-  "Don't have an account yet?" : "Don't have an account yet?",
-  "Sign in" : "Sign in",
-  "Sign up" : "Sign up",
-  "By signing up, you agree to " : "By signing up, you agree to ",
-  "Terms of Service " : "Terms of Service ",
+  "importNFT": "Import NFTs",
+  "noTransactionsYet": "No transactions yet...",
+  "See in AR": "See in AR",
+  "or": "or",
+  "Already have account?": "Already have account?",
+  "Don't have an account yet?": "Don't have an account yet?",
+  "Sign in": "Sign in",
+  "Sign up": "Sign up",
+  "By signing up, you agree to ": "By signing up, you agree to ",
+  "Terms of Service ": "Terms of Service ",
   "and confirm that our ": "and confirm that our ",
   "Privacy Policy ": "Privacy Policy ",
-  "applies to you" : "applies to you",
-  "Scan to login" : "Scan to login",
+  "applies to you": "applies to you",
+  "Scan to login": "Scan to login",
   "Login manually": "Login manually",
   "Email": "Email",
   "Please enter a valid email.": "Please enter a valid email.",
   "Please enter a valid code.": "Please enter a valid code.",
   "Password": "Password",
-  "Password can't be empty" : "Password can't be empty",
-  "Fullname" : "Fullname",
-  "Name can't be empty" : "Name can't be empty",
+  "Password can't be empty": "Password can't be empty",
+  "Fullname": "Fullname",
+  "Name can't be empty": "Name can't be empty",
   "Repeat password": "Repeat password",
-  "Not match" : "Not match",
+  "Not match": "Not match",
   "next": "Next",
-  "importMnemonic" : "Import mnemonic",
-  "createMnemonic" : "Create mnemonic",
-  "save" : "Save",
-  "pasteMnemonic" : "Paste mnemonic"
+  "importMnemonic": "Import mnemonic",
+  "createMnemonic": "Create mnemonic",
+  "save": "Save",
+  "pasteMnemonic": "Paste mnemonic",
+  "Delete wallet from device": "Delete wallet from device",
+  "Forgot password?": "Forgot password?"
 }
