--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,92 +1,91 @@
 {
-  "Success" : "Успех",
-  "Error" : "Ошибка",
-  "Information" : "Информация",
-  "Cancel" : "Отмена",
-  "Sent"  :  "Отправлено",
-  "Received" : "Получено",
-
-  "en" : "Английский",
-  "ru" : "Русский",
-
-  "langMessage" : "Язык приложения, устанавливается согласно языку, установленному в вашем телефоне",
-  "passErrorMessage" : "Заполните поля логин и пароль",
-  "btnRegister" : "Создать аккаунт",
-  "newPassword" : "Новый пароль был отправлен на почту",
-  "regComplete" : "Регистрация завершена!",
-  "clipboard" : "Адрес кошелька скопирован в буфер обмена",
-  "senderAddress" : "Введите адрес кошелька или нажмите сканировать",
-  "changeFullName" : "Изменить имя",
-  "changeemail" : "Изменить Email",
-  "changeemailHint" : "Введите новый адресс почты",
-  "changepwd" : "Изменить пароль",
-  "enterNewPassword" : "Введите новый пароль",
-  "succupdated" : "Успешно изменено",
-  "notEnoughFunds" : "Недостаточно средств на балансе",
-  "switchNetwork" : "Вы действительно хотите сменить сеть по умолчанию?",
-  "bio" : "Хотите использовать Fingerprint/FaceID для авторизации?",
-  "code" : "Введите код",
-  "bscScan"  :  "Вы будете перенаправлены на BscScan",
-  "sentSuccess" : "Танзакция успешно обработана",
-  "walletAddress" : "Адрес кошелька",
-  "receive" : "Получить",
-  "send" : "Отправить",
-  "Sell" : "Продать",
-  "scanAddressToReceivePayment" : "Сканирурте адрес для получения платежа",
+  "Success": "Успех",
+  "Error": "Ошибка",
+  "Information": "Информация",
+  "Cancel": "Отмена",
+  "Sent": "Отправлено",
+  "Received": "Получено",
+  "en": "Английский",
+  "ru": "Русский",
+  "langMessage": "Язык приложения, устанавливается согласно языку, установленному в вашем телефоне",
+  "passErrorMessage": "Заполните поля логин и пароль",
+  "btnRegister": "Создать аккаунт",
+  "newPassword": "Новый пароль был отправлен на почту",
+  "regComplete": "Регистрация завершена!",
+  "clipboard": "Адрес кошелька скопирован в буфер обмена",
+  "senderAddress": "Введите адрес кошелька или нажмите сканировать",
+  "changeFullName": "Изменить имя",
+  "changeemail": "Изменить Email",
+  "changeemailHint": "Введите новый адресс почты",
+  "changepwd": "Изменить пароль",
+  "enterNewPassword": "Введите новый пароль",
+  "succupdated": "Успешно изменено",
+  "notEnoughFunds": "Недостаточно средств на балансе",
+  "switchNetwork": "Вы действительно хотите сменить сеть по умолчанию?",
+  "bio": "Хотите использовать Fingerprint/FaceID для авторизации?",
+  "code": "Введите код",
+  "bscScan": "Вы будете перенаправлены на BscScan",
+  "sentSuccess": "Танзакция успешно обработана",
+  "walletAddress": "Адрес кошелька",
+  "receive": "Получить",
+  "send": "Отправить",
+  "Sell": "Продать",
+  "scanAddressToReceivePayment": "Сканирурте адрес для получения платежа",
   "tokens": "Токены",
   "nfts": "NFT",
   "settings": "Настройки",
-  "changeFullNameHint" : "Введите полное имя",
-  "language" : "Язык",
-  "network" : "Сеть",
-  "newsletter" : "Новости",
-  "fingerprint" : "Вход по отпечатку/лицу",
-  "sendTokens" : "Отправить токены",
-  "to" : "Кому: ",
-  "selectToken" : "Выбрать токен",
-  "amount" : "Количество: ",
-  "loading" : "Загрузка...",
-  "fingerprintEnabled" : "Биометрия включена!",
-  "fingerprintDisabled" : "Биометрия выключена!",
-  "submit" : "Сохранить",
+  "changeFullNameHint": "Введите полное имя",
+  "language": "Язык",
+  "network": "Сеть",
+  "newsletter": "Новости",
+  "fingerprint": "Вход по отпечатку/лицу",
+  "sendTokens": "Отправить токены",
+  "to": "Кому: ",
+  "selectToken": "Выбрать токен",
+  "amount": "Количество: ",
+  "loading": "Загрузка...",
+  "fingerprintEnabled": "Биометрия включена!",
+  "fingerprintDisabled": "Биометрия выключена!",
+  "submit": "Сохранить",
   "walletEmptyError": "Адресс кошелька не может быть пуст",
-  "noSelectedToken" : "Токен не выбран",
-  "pleaseEnterSomeAmount" : "Введите количество",
-  "estimatedGasFee" : "Расчетная комиссия",
-  "dontHaveSuchAmount" : "Нет нужной суммы",
+  "noSelectedToken": "Токен не выбран",
+  "pleaseEnterSomeAmount": "Введите количество",
+  "estimatedGasFee": "Расчетная комиссия",
+  "dontHaveSuchAmount": "Нет нужной суммы",
   "total": "В сумме",
   "noTokensYet": "Нет криптовалют",
   "noNFTsYet": "Нет NFT",
   "learnMore": "Узнать более",
   "dontSeeNFTS": "Не видите ваших NFT?",
-  "importNFT" : "Импорт NFT",
-  "noTransactionsYet" : "Нет транзакций...",
-  "See in AR" : "Посмотреть в AR",
+  "importNFT": "Импорт NFT",
+  "noTransactionsYet": "Нет транзакций...",
+  "See in AR": "Посмотреть в AR",
   "or": "или",
-  "Already have account?" : "Уже имеете аккаунт?",
-  "Don't have an account yet?" : "Все еще нет аккаунта?",
-  "Sign in" : "Авторизация",
-  "Sign up" : "Регистрация",
-  "By signing up, you agree to " : "Регистрируясь, вы соглашаетесь c  ",
-  "Terms of Service " : "Условиями обслуживания ",
+  "Already have account?": "Уже имеете аккаунт?",
+  "Don't have an account yet?": "Все еще нет аккаунта?",
+  "Sign in": "Авторизация",
+  "Sign up": "Регистрация",
+  "By signing up, you agree to ": "Регистрируясь, вы соглашаетесь c  ",
+  "Terms of Service ": "Условиями обслуживания ",
   "and confirm that our ": "и подтверждаете, что наша ",
   "Privacy Policy ": "Политика конфиденциальности ",
-  "applies to you" : "относится к вам",
-  "Scan to login" : "Использовать биометрию",
+  "applies to you": "относится к вам",
+  "Scan to login": "Использовать биометрию",
   "Login manually": "Войти вручную",
   "Email": "Эл. адрес",
   "Please enter a valid email.": "Введите, пожалуйста, действительный адрес электронной почты.",
   "Please enter a valid code.": "Введите, пожалуйста, действительный код.",
   "Password": "Пароль",
-  "Password can't be empty" : "Пароль не может быть пустым",
-  "Fullname" : "Полное имя",
+  "Password can't be empty": "Пароль не может быть пустым",
+  "Fullname": "Полное имя",
   "Name can't be empty": "Введите полное имя",
   "Repeat password": "Повторите пароль",
-  "Not match" : "Пароли не совпадают",
+  "Not match": "Пароли не совпадают",
   "next": "Далее",
-  "importMnemonic" : "Импорт фразы",
-  "createMnemonic" : "Создать фразу",
-  "save" : "Сохранить",
-  "pasteMnemonic" : "Введите мнемоник фразу"
-  
+  "importMnemonic": "Импорт фразы",
+  "createMnemonic": "Создать фразу",
+  "save": "Сохранить",
+  "pasteMnemonic": "Введите мнемоник фразу",
+  "Delete wallet from device": "Удалить кошелек",
+  "Forgot password?": "Забыли пороль?"
 }
